# novelty_maze

./: .gitignore  pyproject.toml
examples/: nn_brns.py  nn_fitness.py  nn_ns.py  player_control.py
src/novelty_maze/: __init__.py  env.py  point_utils.py
src/novelty_maze/leap/: probe.py  problem.py
