[project]
name = "leap_novelty_maze"
version = "0.0.1"
authors = [
  { name="Luke McCombs", email="luke@wodsys.dev" },
]
description = "A package for using NoveltySearch's maze environment with LEAP."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "leap-ec", "torch", "pygame"
]